--- a/index.css
+++ b/index.css
@@ -1,6 +1,17 @@
-/* CSS is how you can add style to your website, such as colors, fonts, and positioning of your
-   HTML content. To learn how to do something, just try searching Google for questions like
-   "how to change link color." */
+html,
+body {
+  margin: 0;
+  padding: 0;
+
+  user-select: none;
+}
+
+a,
+a:visited,
+a:active {
+  color: white;
+  /* text-decoration: underline; */
+}
 
 body {
   background-color: white;
@@ -8,7 +19,13 @@ body {
   font-family: Verdana;
 }
 
+.container {
+  width: 100vw;
+  height: 100vh;
+}
+
 #title {
+  margin: 0;
   letter-spacing: 3em;
   font-size: 3em;
 
@@ -16,33 +33,69 @@ body {
 }
 
 #title:hover {
-  transform: scale3d(1.0, 3.0, 4.0);
+  transform: scale3d(1, 3, 4);
 }
 
-p {
-  width:  500px;
-  height:  500px;
-  line-height: 500px;
-  border-radius: 50%;
+#intro-paragraph {
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   text-align: center;
   word-break: keep-all;
 
   transition: 0.3s;
 
-  background-color: greenyellow;
-}
+  background-color: black;
+  color: white;
 
-p:hover {
-  transform: skew(10deg);
-}
-
-span {
-  font: 26px Monaco, MonoSpace;
-  height: 200px;
   position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  font: 26px Monaco, MonoSpace;
+}
+
+#intro-paragraph span {
+  color: #3a3a3a;
+}
+
+#intro-paragraph a {
+  position: relative;
+  z-index: 9876;
+}
+
+@keyframes rotate {
+  0% {
+    transform: translate(-50%, -50%) rotate(0);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(180deg);
+  }
+}
+
+/* #intro-paragraph:hover {
+  animation: rotate 5s;
+  animation-fill-mode: forwards;
+} */
+
+.circling {
+  height: 200px;
+  /* position: absolute; */
   width: 20px;
-  
+
   transform: translate(-50%, -50%);
   transform-origin: bottom center;
+}
+
+#we {
+  position: fixed;
+  left: 0;
+  bottom: 0;
 }
