--- a/poster-articles.css
+++ b/poster-articles.css
@@ -1,46 +1,42 @@
 /* poster-articles.css */
 
-.article-container {
-	width: calc(100vw - (100vh / 4 * 3));
-	height: 100vh;
-	background-color: black;
-	color: black;
-
-	position: fixed;
-	right: 0;
-	top: 0;
-	z-index: 5;
-
-	transition: opacity color background-color 0.5s;
-
-	opacity: 1;
-
-	display: grid;
+body {
+  color: white;
 }
 
-.article-container > .grid-item {
-	width: calc(100vw - (100vh / 4 * 3));
+.articles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+
+  scroll-snap-type: y proximity;
+}
+
+h1 {
+  padding: 1em;
+  margin: 0;
+  letter-spacing: 1em;
+  font-weight: 400;
+  background-color: black;
+  position: sticky;
+  top: 0;
 }
 
 article {
-	font-size: calc(5vh);
-	padding: 0 32px 0 32px;
-}
+  font-size: 2vw;
+  line-height: 3vw;
 
-article:nth-child(2) {
-	/*background-color: lightgray;*/
+  height: calc(100vh);
 
-	position: absolute;
-	bottom: 0;
-	right: 0;
-}
+  scroll-snap-align: start;
 
-@media only screen and (max-width: 936px) {
-	.article-container {
-		opacity: 0;
-	}	
-}
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-.enlighten {
-	color: white;
+  width: 50%;
+  margin: 0 auto;
 }
