--- a/stranger.css
+++ b/stranger.css
@@ -1,7 +1,31 @@
-/* poster-articles.css */
+* {
+  box-sizing: border-box;
+  font-family: "Pretendard Variable", Pretendard, -apple-system,
+    BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+    "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  word-break: keep-all;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+
+  background-color: black;
+}
 
 body {
   color: white;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
 }
 
 .articles {
@@ -39,4 +63,6 @@ article {
 
   width: 50%;
   margin: 0 auto;
+
+  color: #3a3a3a;
 }
